MiniJavaParser.java
// Generated from MiniJava.g4 by ANTLR 4.0

import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MiniJavaParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__33=1, T__32=2, T__31=3, T__30=4, T__29=5, T__28=6, T__27=7, T__26=8, 
		T__25=9, T__24=10, T__23=11, T__22=12, T__21=13, T__20=14, T__19=15, T__18=16, 
		T__17=17, T__16=18, T__15=19, T__14=20, T__13=21, T__12=22, T__11=23, 
		T__10=24, T__9=25, T__8=26, T__7=27, T__6=28, T__5=29, T__4=30, T__3=31, 
		T__2=32, T__1=33, T__0=34, INT=35, DIGIT=36, UNDERSCORE=37, LETTER=38, 
		ADD_MINUS=39, AND=40, WS=41;
	public static final String[] tokenNames = {
		"<INVALID>", "'main'", "'length'", "'true'", "'return'", "'new'", "'class'", 
		"'void'", "';'", "'while'", "'{'", "'extends'", "'='", "'}'", "'if'", 
		"'int'", "'('", "'*'", "','", "'this'", "'false'", "'.'", "'boolean'", 
		"'System.out.println'", "'['", "'String'", "'public'", "']'", "'>'", "'!'", 
		"'static'", "'else'", "')'", "'+'", "'-'", "INT", "DIGIT", "'_'", "LETTER", 
		"ADD_MINUS", "'&&'", "WS"
	};
	public static final int
		RULE_t = 0, RULE_expr_neg = 1, RULE_expr_cmp = 2, RULE_expr_am = 3, RULE_expr_time = 4, 
		RULE_expr_and = 5, RULE_expr_arith = 6, RULE_array = 7, RULE_expr_length = 8, 
		RULE_expr_this = 9, RULE_expr_new = 10, RULE_expr_unit = 11, RULE_expr_para = 12, 
		RULE_expr = 13, RULE_stat = 14, RULE_varDef = 15, RULE_methodDef = 16, 
		RULE_classDef = 17, RULE_mainClass = 18, RULE_prog = 19, RULE_bool = 20, 
		RULE_calculate = 21, RULE_id = 22, RULE_type = 23;
	public static final String[] ruleNames = {
		"t", "expr_neg", "expr_cmp", "expr_am", "expr_time", "expr_and", "expr_arith", 
		"array", "expr_length", "expr_this", "expr_new", "expr_unit", "expr_para", 
		"expr", "stat", "varDef", "methodDef", "classDef", "mainClass", "prog", 
		"bool", "calculate", "id", "type"
	};

	@Override
	public String getGrammarFileName() { return "MiniJava.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }


	    void print(int num){
	        System.out.println(num);
	    }
	    HashMap<String, Object> valueMap = new HashMap<String, Object>();

	public MiniJavaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TContext extends ParserRuleContext {
		public int v;
		public Token num;
		public Expr_amContext arith_am;
		public IdContext name;
		public Expr_negContext arith_neg;
		public TContext arith_t;
		public Expr_negContext expr_neg() {
			return getRuleContext(Expr_negContext.class,0);
		}
		public TContext t() {
			return getRuleContext(TContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public Expr_amContext expr_am() {
			return getRuleContext(Expr_amContext.class,0);
		}
		public TerminalNode INT() { return getToken(MiniJavaParser.INT, 0); }
		public TContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_t; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterT(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitT(this);
		}
	}

	public final TContext t() throws RecognitionException {
		TContext _localctx = new TContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_t);
		try {
			setState(66);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(48); ((TContext)_localctx).num = match(INT);
				((TContext)_localctx).v =  (((TContext)_localctx).num!=null?Integer.valueOf(((TContext)_localctx).num.getText()):0);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(50); match(16);
				setState(51); ((TContext)_localctx).arith_am = expr_am();
				setState(52); match(32);
				((TContext)_localctx).v =  ((TContext)_localctx).arith_am.v;
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(55); ((TContext)_localctx).name = id();

				    try{
				        int value = (int)valueMap.get((((TContext)_localctx).name!=null?_input.getText(((TContext)_localctx).name.start,((TContext)_localctx).name.stop):null));
				        ((TContext)_localctx).v =  value;
				    }catch(NullPointerException e){
				        notifyErrorListeners("Variable "+(((TContext)_localctx).name!=null?_input.getText(((TContext)_localctx).name.start,((TContext)_localctx).name.stop):null)+" not defined.");
				    }

				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(58); ((TContext)_localctx).arith_neg = expr_neg();

				    ((TContext)_localctx).v =  ((TContext)_localctx).arith_neg.v;

				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(61); match(16);
				setState(62); ((TContext)_localctx).arith_t = t();
				setState(63); match(32);

				    ((TContext)_localctx).v =  ((TContext)_localctx).arith_t.v;

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_negContext extends ParserRuleContext {
		public int v;
		public TContext arith_t;
		public Expr_andContext arith_and;
		public TContext t() {
			return getRuleContext(TContext.class,0);
		}
		public Expr_andContext expr_and() {
			return getRuleContext(Expr_andContext.class,0);
		}
		public Expr_negContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_neg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterExpr_neg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitExpr_neg(this);
		}
	}

	public final Expr_negContext expr_neg() throws RecognitionException {
		Expr_negContext _localctx = new Expr_negContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expr_neg);
		try {
			setState(76);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68); match(29);
				setState(69); ((Expr_negContext)_localctx).arith_t = t();
				((Expr_negContext)_localctx).v =  ((Expr_negContext)_localctx).arith_t.v>0?0:1;
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72); match(29);
				setState(73); ((Expr_negContext)_localctx).arith_and = expr_and();
				((Expr_negContext)_localctx).v =  ((Expr_negContext)_localctx).arith_and.v>0?0:1;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_cmpContext extends ParserRuleContext {
		public int v;
		public TContext num1;
		public TContext num2;
		public Expr_cmpContext arith;
		public TContext t(int i) {
			return getRuleContext(TContext.class,i);
		}
		public List<TContext> t() {
			return getRuleContexts(TContext.class);
		}
		public Expr_cmpContext expr_cmp() {
			return getRuleContext(Expr_cmpContext.class,0);
		}
		public Expr_cmpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_cmp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterExpr_cmp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitExpr_cmp(this);
		}
	}

	public final Expr_cmpContext expr_cmp() throws RecognitionException {
		Expr_cmpContext _localctx = new Expr_cmpContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr_cmp);
		try {
			setState(93);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78); ((Expr_cmpContext)_localctx).num1 = t();
				setState(79); match(28);
				setState(80); ((Expr_cmpContext)_localctx).num2 = t();

				    ((Expr_cmpContext)_localctx).v =  ((Expr_cmpContext)_localctx).num1.v>((Expr_cmpContext)_localctx).num2.v? 1:0;

				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(83); match(16);
				setState(84); ((Expr_cmpContext)_localctx).arith = expr_cmp();
				setState(85); match(32);

				    ((Expr_cmpContext)_localctx).v =  ((Expr_cmpContext)_localctx).arith.v;

				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(88); match(16);
				setState(89); expr_cmp();
				notifyErrorListeners("Missing closing ')'");

				    ((Expr_cmpContext)_localctx).v =  -1;

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_amContext extends ParserRuleContext {
		public int v;
		public Expr_timeContext num11;
		public Expr_amContext num12;
		public Expr_timeContext num21;
		public Expr_amContext num22;
		public Expr_amContext num3;
		public Expr_timeContext num4;
		public Expr_timeContext expr_time() {
			return getRuleContext(Expr_timeContext.class,0);
		}
		public Expr_amContext expr_am() {
			return getRuleContext(Expr_amContext.class,0);
		}
		public Expr_amContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_am; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterExpr_am(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitExpr_am(this);
		}
	}

	public final Expr_amContext expr_am() throws RecognitionException {
		Expr_amContext _localctx = new Expr_amContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expr_am);
		try {
			setState(117);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(95); ((Expr_amContext)_localctx).num11 = expr_time();
				setState(96); match(33);
				setState(97); ((Expr_amContext)_localctx).num12 = expr_am();
				((Expr_amContext)_localctx).v =  ((Expr_amContext)_localctx).num11.v+((Expr_amContext)_localctx).num12.v;
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(100); ((Expr_amContext)_localctx).num21 = expr_time();
				setState(101); match(34);
				setState(102); ((Expr_amContext)_localctx).num22 = expr_am();
				((Expr_amContext)_localctx).v =  ((Expr_amContext)_localctx).num21.v-((Expr_amContext)_localctx).num22.v;
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(105); match(16);
				setState(106); ((Expr_amContext)_localctx).num3 = expr_am();
				setState(107); match(32);
				((Expr_amContext)_localctx).v =  ((Expr_amContext)_localctx).num3.v;
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(110); match(16);
				setState(111); expr_am();
				notifyErrorListeners("Missing closing ')'");
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(114); ((Expr_amContext)_localctx).num4 = expr_time();
				((Expr_amContext)_localctx).v =  ((Expr_amContext)_localctx).num4.v;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_timeContext extends ParserRuleContext {
		public int v;
		public TContext num11;
		public Expr_timeContext num12;
		public Expr_timeContext num2;
		public TContext num3;
		public TContext t() {
			return getRuleContext(TContext.class,0);
		}
		public Expr_timeContext expr_time() {
			return getRuleContext(Expr_timeContext.class,0);
		}
		public Expr_timeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_time; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterExpr_time(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitExpr_time(this);
		}
	}

	public final Expr_timeContext expr_time() throws RecognitionException {
		Expr_timeContext _localctx = new Expr_timeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expr_time);
		try {
			setState(136);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(119); ((Expr_timeContext)_localctx).num11 = t();
				setState(120); match(17);
				setState(121); ((Expr_timeContext)_localctx).num12 = expr_time();
				((Expr_timeContext)_localctx).v =  ((Expr_timeContext)_localctx).num11.v * ((Expr_timeContext)_localctx).num12.v;
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(124); match(16);
				setState(125); ((Expr_timeContext)_localctx).num2 = expr_time();
				setState(126); match(32);
				((Expr_timeContext)_localctx).v =  ((Expr_timeContext)_localctx).num2.v;
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(129); match(16);
				setState(130); expr_time();
				notifyErrorListeners("Missing closing ')'");
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(133); ((Expr_timeContext)_localctx).num3 = t();
				((Expr_timeContext)_localctx).v =  ((Expr_timeContext)_localctx).num3.v;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_andContext extends ParserRuleContext {
		public int v;
		public BoolContext num11;
		public BoolContext num12;
		public Expr_andContext num2;
		public BoolContext num3;
		public List<BoolContext> bool() {
			return getRuleContexts(BoolContext.class);
		}
		public BoolContext bool(int i) {
			return getRuleContext(BoolContext.class,i);
		}
		public TerminalNode AND() { return getToken(MiniJavaParser.AND, 0); }
		public Expr_andContext expr_and() {
			return getRuleContext(Expr_andContext.class,0);
		}
		public Expr_andContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_and; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterExpr_and(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitExpr_and(this);
		}
	}

	public final Expr_andContext expr_and() throws RecognitionException {
		Expr_andContext _localctx = new Expr_andContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expr_and);
		try {
			setState(155);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(138); ((Expr_andContext)_localctx).num11 = bool();
				setState(139); match(AND);
				setState(140); ((Expr_andContext)_localctx).num12 = bool();
				((Expr_andContext)_localctx).v = (((Expr_andContext)_localctx).num11.v==1)&&(((Expr_andContext)_localctx).num12.v==1)?1:0;
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(143); match(16);
				setState(144); ((Expr_andContext)_localctx).num2 = expr_and();
				setState(145); match(32);
				((Expr_andContext)_localctx).v =  ((Expr_andContext)_localctx).num2.v;
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(148); match(16);
				setState(149); expr_and();
				notifyErrorListeners("Missing closing ')'");
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(152); ((Expr_andContext)_localctx).num3 = bool();
				((Expr_andContext)_localctx).v =  ((Expr_andContext)_localctx).num3.v;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_arithContext extends ParserRuleContext {
		public int v;
		public Expr_amContext num1;
		public Expr_andContext num2;
		public Expr_andContext expr_and() {
			return getRuleContext(Expr_andContext.class,0);
		}
		public Expr_amContext expr_am() {
			return getRuleContext(Expr_amContext.class,0);
		}
		public Expr_arithContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_arith; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterExpr_arith(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitExpr_arith(this);
		}
	}

	public final Expr_arithContext expr_arith() throws RecognitionException {
		Expr_arithContext _localctx = new Expr_arithContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expr_arith);
		try {
			setState(163);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(157); ((Expr_arithContext)_localctx).num1 = expr_am();
				((Expr_arithContext)_localctx).v =  ((Expr_arithContext)_localctx).num1.v;
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(160); ((Expr_arithContext)_localctx).num2 = expr_and();
				((Expr_arithContext)_localctx).v =  ((Expr_arithContext)_localctx).num2.v;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayContext extends ParserRuleContext {
		public ArrayList v;
		public Expr_arithContext expr_arith() {
			return getRuleContext(Expr_arithContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitArray(this);
		}
	}

	public final ArrayContext array() throws RecognitionException {
		ArrayContext _localctx = new ArrayContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_array);
		try {
			setState(183);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(165); id();
				setState(166); match(24);
				setState(167); expr_arith();
				setState(168); match(27);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(170); id();
				setState(171); match(24);
				setState(172); expr_arith();
				notifyErrorListeners("Missing closing ']'");
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(175); match(16);
				setState(176); array();
				setState(177); match(32);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(179); match(16);
				setState(180); array();
				notifyErrorListeners("Missing closing ')'");
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_lengthContext extends ParserRuleContext {
		public int v = 0;
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public Expr_lengthContext expr_length() {
			return getRuleContext(Expr_lengthContext.class,0);
		}
		public Expr_lengthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_length; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterExpr_length(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitExpr_length(this);
		}
	}

	public final Expr_lengthContext expr_length() throws RecognitionException {
		Expr_lengthContext _localctx = new Expr_lengthContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_expr_length);
		try {
			setState(200);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(187);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(185); array();
					}
					break;

				case 2:
					{
					setState(186); id();
					}
					break;
				}
				setState(189); match(21);
				setState(190); match(2);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(192); match(16);
				setState(193); expr_length();
				setState(194); match(32);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(196); match(16);
				setState(197); expr_length();
				notifyErrorListeners("Missing closing ')'");
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_thisContext extends ParserRuleContext {
		public Expr_thisContext expr_this() {
			return getRuleContext(Expr_thisContext.class,0);
		}
		public Expr_thisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_this; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterExpr_this(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitExpr_this(this);
		}
	}

	public final Expr_thisContext expr_this() throws RecognitionException {
		Expr_thisContext _localctx = new Expr_thisContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_expr_this);
		try {
			setState(211);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(202); match(19);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(203); match(16);
				setState(204); expr_this();
				setState(205); match(32);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(207); match(16);
				setState(208); expr_this();
				notifyErrorListeners("Missing closing ')'");
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_newContext extends ParserRuleContext {
		public Expr_arithContext expr_arith() {
			return getRuleContext(Expr_arithContext.class,0);
		}
		public Expr_newContext expr_new() {
			return getRuleContext(Expr_newContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Expr_newContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_new; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterExpr_new(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitExpr_new(this);
		}
	}

	public final Expr_newContext expr_new() throws RecognitionException {
		Expr_newContext _localctx = new Expr_newContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expr_new);
		try {
			setState(244);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(213); match(5);
				setState(214); type();
				setState(215); match(24);
				setState(216); expr_arith();
				setState(217); match(27);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(219); match(5);
				setState(220); type();
				setState(221); match(24);
				setState(222); expr_arith();
				setState(223); match(27);
				notifyErrorListeners("Missing closing ']'");
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(226); match(5);
				setState(227); id();
				setState(228); match(16);
				setState(229); match(32);
				}
				break;
